# GoPro_Controller

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  README copy.md  README.md  build_all.sh  build_master.bat  build_master.sh  build_master_amd64.sh  build_master_win.bat  build_master_win.sh  build_master_x64.bat  build_server.bat  build_server.sh  build_server_amd.sh  build_server_amd64.sh  build_server_arm64.sh  build_server_win.bat  build_server_win.sh  build_server_x64.bat  build_server_x86.bat  build_server_x86.sh  cv2viewer  example.json  imgui.ini  index.html  index0.ts  master  package-lock.json  package.json  package_master.sh  package_master_amd64.sh  package_master_x64.bat  package_server..sh  package_server._arm64.sh  package_server.sh  package_server_amd64.sh  package_server_x64.bat  (+4 more)
build_master/: CPackConfig.cmake  CPackSourceConfig.cmake  imgui.ini  master
cmake/: VSWhere.cmake  WSL.cmake  Windows.Kits.cmake  arm-gnueabihf.toolchain.cmake  windows-toolchain.cmake
lib/mdns/: mdns_cppConfig.cmake
lib/mdns/src/: mdns.cpp  mdns.h  utils.cpp
lib/notify/src/: imgui_notify.h
lib/opencv/modules/ts/src/: ts_func.cpp
package/: deb_master_amd64  deb_server_amd64  deb_server_arm64  win_master_x64.iss  win_server_x64.iss  win_server_x64.xml
src/: App.vue  backend.js  background.js  main.cpp  main.js  renderer.js
src/common/: camera_code.h  camera_model.h  camera_other.h  camera_setting.h  camera_status.h  config.h  iphelper.h
src/components/: CameraPreview.vue
src/data/: video_texture.h
src/master/: GoProMaster.cpp  GoProMaster.h  GoProMaster.hpp  IO.cpp  IO.h  imgui_helper.cpp  imgui_helper.h  io.cpp  io.h  main.cpp  state.h  state_init.h
src/master/data/: camera_info.h  server_connection.h  state.h  state_action.cpp  state_action.h  video_texture.cpp
src/master/popup/: add_camera_popwin.cpp  add_camera_popwin.h  add_preset_popwin.cpp  add_preset_popwin.h  base_pop_window.cpp  base_pop_window.h  media_browser_popwin cpp  media_browser_popwin.cpp  media_browser_popwin.h  popwins.h  preset_manager_popwin.cpp  preset_manager_popwin.h  preview_popwin.cpp  preview_popwin.h  scan_camera_popwin.cpp  scan_camera_popwin.h  start_webcam_popwin.cpp  start_webcam_popwin.h  studio.popwin.cpp  studio.popwin.h  style_setting_popwin.cpp  style_setting_popwin.h
src/master/popup/preview/: decode.cpp  preview_popwin.cpp  render.cpp
src/master/windows/: base_window.cpp  base_window.h  camera_list.cpp  camera_list.h  commands.cpp  commands.h  inspector.cpp  inspector.h  style_setting.cpp  style_setting.h  system_style.h  websocket_server.cpp  websocket_server.h  wins.h
src/master/windows/camera_list/: camera_list.cpp  display_header.cpp  display_state.cpp
src/master/windows/inspector/: command.cpp  filter.cpp  inspector.cpp  media.cpp  setting.cpp  status.cpp  utility.cpp
src/plugins/: vuetify.js
src/popup/: NewCamera.vue
src/scripts/: gopro.js  gopro_camera.js
src/section/: ActionButtons.vue  CameraList.vue  ControlInspector.vue  GlobalControl.vue
src/server/: GoProController.cpp  GoProController.h  GoProController.hpp  GoProController_Private.cpp  UdpProxyServer.cpp  main.cpp
src/server/controller/: GoProController.cpp  command.cpp  media.cpp  preview.cpp  query.cpp  webcam.cpp
src/server/private/: command.cpp  media.cpp  preview.cpp  private.cpp  query.cpp  webcam.cpp
